--- a/.github/workflows/chroma.yml
+++ b/.github/workflows/chroma.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        username: zzstoatzz
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Build and push Docker image
@@ -28,4 +28,4 @@ jobs:
         context: .
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/chroma:latest
+        tags: zzstoatzz/chroma:latest
