--- a/.github/workflows/chroma.yml
+++ b/.github/workflows/chroma.yml
@@ -8,24 +8,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout chroma-core/chroma repository
-      uses: actions/checkout@v2
-      with:
-        repository: chroma-core/chroma
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v1
+        with:
+          workload_identity_provider: ${{ secrets.GHA_WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: marvin-recipes-workflow-main@prefect-org-github-actions.iam.gserviceaccount.com
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v1
+      - name: Configure Google Cloud credential helper
+        run: gcloud auth configure-docker --quiet us-docker.pkg.dev
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v1 
-      with:
-        username: zzstoatzz
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Checkout chroma-core/chroma repository
+        uses: actions/checkout@v2
+        with:
+          repository: chroma-core/chroma
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v2
-      with:
-        context: .
-        platforms: linux/amd64,linux/arm64
-        push: true
-        tags: zzstoatzz/chroma:latest
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: us-docker.pkg.dev/prefect-prd-internal-tools/marvin-recipes/chroma:latest
