--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,16 @@ prefect = ["prefect>=2.11.0", "gcsfs>=2023.6.0"]
 scraping = ["trafilatura[sitemaps]>=1.6.1", "yake>=0.4.8", "fake-useragent>=1.1.3", "xxhash>=3.2.0"]
 slackbot = ["cachetools>=5.3.1", "numpy>=1.21.2", "duckduckgo_search>=3.8.3"]
 
+all = [
+    "marvin[all]",
+    "marvin-recipes[chroma]",
+    "marvin-recipes[loaders]",
+    "marvin-recipes[pdf]",
+    "marvin-recipes[prefect]",
+    "marvin-recipes[scraping]",
+    "marvin-recipes[slackbot]",
+]
+
 [project.urls]
 Code = "https://github.com/prefecthq/marvin-recipes"
 Documentation = "https://github.com/prefecthq/marvin-recipes"
