--- a/prefect.yaml
+++ b/prefect.yaml
@@ -22,3 +22,4 @@ deployments:
       env:
         MARVIN_CHROMA_SERVER_HOST: "{{ $MARVIN_CHROMA_SERVER_HOST }}"
         MARVIN_CHROMA_SERVER_HTTP_PORT: "{{ $MARVIN_CHROMA_SERVER_HTTP_PORT }}"
+        MARVIN_OPENAI_API_KEY: "{{ $MARVIN_OPENAI_API_KEY }}"
