--- a/prefect.yaml
+++ b/prefect.yaml
@@ -20,7 +20,7 @@ deployments:
     name: kubernetes-prd-internal-tools
     job_variables:
       env:
-        MARVIN_OPENAI_API_KEY: "{{ prefect.blocks.secrets.openai-api-key }}"
+        MARVIN_OPENAI_API_KEY: "{{ prefect.blocks.secret.openai-api-key }}"
         MARVIN_CHROMA_SERVER_HOST: "{{ $MARVIN_CHROMA_SERVER_HOST }}"
         MARVIN_CHROMA_SERVER_HTTP_PORT: "{{ $MARVIN_CHROMA_SERVER_HTTP_PORT }}"
 
@@ -32,7 +32,7 @@ deployments:
       cron: "0 20 * * 1-5"
     job_variables:
       env:
-        MARVIN_OPENAI_API_KEY: "{{ prefect.blocks.secrets.openai-api-key }}"
-        MARVIN_SLACK_API_TOKEN: "{{ prefect.blocks.secrets.slack-api-token }}"
+        MARVIN_OPENAI_API_KEY: "{{ prefect.blocks.secret.openai-api-key }}"
+        MARVIN_SLACK_API_TOKEN: "{{ prefect.blocks.secret.slack-api-token }}"
         PREFECT_LOGGING_EXTRA_LOGGERS: "marvin"
         PREFECT_LOGGING_LEVEL: "DEBUG"
