--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ loaders = ["chardet>=5.1.0", "aiofiles>=23.1.0"]
 pdf = ["pypdf>=3.13.0"]
 prefect = ["prefect>=2.11.0", "gcsfs>=2023.6.0"]
 scraping = ["trafilatura[sitemaps]>=1.6.1", "yake>=0.4.8", "fake-useragent>=1.1.3", "xxhash>=3.2.0"]
+serpapi = ["google-search-results>=2.4.2"]
 slackbot = ["cachetools>=5.3.1", "numpy>=1.21.2", "duckduckgo_search>=3.8.3"]
 
 all = [
