--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,10 @@ classifiers = [
 keywords = ["ai", "chatbot", "llm"]
 requires-python = ">=3.9"
 dependencies = [
-    "marvin>=1.2.1",
+    "aiofiles>=23.1.0",
+    "chardet>=5.2.0",
+    "ipython>=8.14.0",
+    "marvin>=1.3.0",
     "xxhash>=3.3.0",
 ]
 
@@ -24,10 +27,16 @@ dev = [
     "pre-commit>=2.21,<4.0",
     "ruff",
 ]
-loaders = ["chardet>=5.1.0", "aiofiles>=23.1.0"]
+loaders = [
+    "chardet>=5.1.0",
+    "aiofiles>=23.1.0",
+    "trafilatura[sitemaps]>=1.6.1",
+    "yake>=0.4.8",
+    "fake-useragent>=1.1.3"
+]
 pdf = ["pypdf>=3.13.0"]
-prefect = ["prefect>=2.11.0", "gcsfs>=2023.6.0"]
-scraping = ["trafilatura[sitemaps]>=1.6.1", "yake>=0.4.8", "fake-useragent>=1.1.3", "xxhash>=3.2.0"]
+prefect = ["prefect>=2.11.3", "gcsfs>=2023.6.0"]
+scraping = []
 serpapi = ["google-search-results>=2.4.2"]
 slackbot = ["cachetools>=5.3.1", "numpy>=1.21.2", "duckduckgo_search>=3.8.3"]
 
