--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,9 +12,11 @@ keywords = ["ai", "chatbot", "llm"]
 requires-python = ">=3.9"
 dependencies = [
     "aiofiles>=23.1.0",
+    "cachetools>=5.3.1",
     "chardet>=5.2.0",
     "ipython>=8.14.0",
     "marvin>=1.4.2",
+    "pydantic<2.0.0",
     "xxhash>=3.3.0",
 ]
 
