--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "chardet>=5.2.0",
     "ipython>=8.14.0",
     "marvin @ git+https://github.com/PrefectHQ/marvin.git@slackbot-update",
+    "openai<1",
     "pydantic<2.0.0",
     "xxhash>=3.3.0",
 ]
