--- a/prefect.yaml
+++ b/prefect.yaml
@@ -6,7 +6,7 @@ build:
 push:
 
 pull: # to run on the worker just before the flow run is executed
-- prefect.deployments.steps.git_clone:
+- prefect.deployments.steps.git_clone: &git_clone
     repository: https://github.com/PrefectHQ/marvin-recipes.git
     branch: main
 
@@ -51,3 +51,13 @@ deployments:
       branch: main
   - prefect.deployments.steps.run_shell_script:
       script: cd marvin-recipes && pip install .
+
+- name: refresh-vectorstore
+  entrypoint: examples/flows/refresh_vectorstore.py:update_marvin_knowledge
+  parameters:
+    client_type: http
+  pull:
+  - prefect.deployments.steps.git_clone:
+      <<: *git_clone
+  - prefect.deployments.steps.run_shell_script:
+      script: pip install 'git+https://github.com/PrefectHQ/marvin-recipes.git'
